# rust-symphony

./: .envrc  .gitignore  .gitmodules  Cargo.toml  README.md  WORKFLOW.md  biome.json  deny.toml  dependabot.yml  devenv.nix  devenv.yaml  flake.nix  install.sh  moon.yml  nextest.toml  package.json  tests.txt  tsconfig.json
.config/: hakari.toml
.cursor/: README.md  hooks.json  mcp.json
.cursor/commands/: activate.md  mui.md  skill.md  thinking.md
.cursor/plans/: forge_full-stack_framework_plan_8f21239e.plan.md
.cursor/rules/: beads.mdc
.cursor/skills/effect.ts-architect/: SKILL.md
.cursor/skills/effect.ts-fundamentals/: SKILL.md
.cursor/skills/effect.ts-react/: SKILL.md
.cursor/skills/effect.ts-testing/: SKILL.md
.cursor/skills/testing-patterns/: SKILL.md
.cursor/skills/thinking/abstraction-laddering/: SKILL.md
.cursor/skills/thinking/balancing-feedback-loop/: SKILL.md
.cursor/skills/thinking/concept-map/: SKILL.md
.cursor/skills/thinking/confidence-speed-quality/: SKILL.md
.cursor/skills/thinking/connection-circles/: SKILL.md
.cursor/skills/thinking/cynefin-framework/: SKILL.md
.cursor/skills/thinking/decision-matrix/: SKILL.md
.cursor/skills/thinking/eisenhower-matrix/: SKILL.md
.cursor/skills/thinking/first-principles/: SKILL.md
.cursor/skills/thinking/hard-choice/: SKILL.md
.cursor/skills/thinking/iceberg-model/: SKILL.md
.cursor/skills/thinking/impact-effort/: SKILL.md
.cursor/skills/thinking/inversion/: SKILL.md
.cursor/skills/thinking/issue-trees/: SKILL.md
.cursor/skills/thinking/ladder-of-inference/: SKILL.md
.cursor/skills/thinking/ooda-loop/: SKILL.md
.cursor/skills/thinking/productive-thinking-model/: SKILL.md
.cursor/skills/thinking/reinforcing-feedback-loop/: SKILL.md
.cursor/skills/thinking/second-order-thinking/: SKILL.md
.cursor/skills/thinking/six-thinking-hats/: SKILL.md
.cursor/skills/thinking/zwicky-box/: SKILL.md
.github/actions/checkout/: action.yml
.github/actions/run-devenv-moon/: action.yml
.github/actions/sccache-stats/: action.yml
.github/actions/security-gitleaks/: action.yml
.github/actions/security-rust-audit/: action.yml
.github/actions/security-semgrep/: action.yml
.github/actions/security-trivy-deps/: action.yml
.github/actions/security-trivy-fs/: action.yml
.github/actions/setup-mold/: action.yml
.github/actions/setup-moon/: action.yml
.github/actions/setup-nix-devenv/: action.yml
.github/actions/setup-sccache/: action.yml
.github/workflows/: ci.yml  publish.yml  security.yml
.moon/: toolchain.yml  toolchains.yml  workspace.yml
crates/symphony-agent/: Cargo.toml  moon.yml
crates/symphony-agent/src/: acp.rs  cli.rs  lib.rs  protocol.rs  runner.rs  spawn.rs  stream_cli.rs
crates/symphony-agent/tests/: fake_subprocess_handshake.rs
crates/symphony-agent/tests/fixtures/: fake_agent_codex.sh
crates/symphony-config/: Cargo.toml  moon.yml
crates/symphony-config/src/: build.rs  config.rs  error.rs  lib.rs  resolve.rs
crates/symphony-config/tests/: load_workflow_integration.rs
crates/symphony-config/tests/fixtures/: WORKFLOW.md
crates/symphony-domain/: Cargo.toml  moon.yml
crates/symphony-domain/src/: issue.rs  lib.rs  orchestrator.rs  path_serde.rs  retry.rs  run_attempt.rs  session.rs  workflow.rs  workspace.rs  worktree.rs
crates/symphony-guest-runner/: Cargo.toml
crates/symphony-guest-runner/src/: main.rs
crates/symphony-orchestration/: Cargo.toml  moon.yml
crates/symphony-orchestration/src/: claim_state.rs  lib.rs  messages.rs  scheduling.rs  snapshot.rs  transitions.rs
crates/symphony-prompt/: Cargo.toml  moon.yml
crates/symphony-prompt/src/: error.rs  lib.rs  render.rs
crates/symphony-runner/: Cargo.toml  moon.yml
crates/symphony-runner/src/: cli.rs  lib.rs  loop.rs  loop_.rs  main.rs  reload.rs  startup.rs
crates/symphony-runner/tests/: cli_integration.rs  orchestrator_dry_run_wiremock.rs
crates/symphony-sandbox/: Cargo.toml
crates/symphony-sandbox/src/: error.rs  lib.rs
crates/symphony-sandbox/tests/: integration_firecracker.rs
crates/symphony-tracker/: Cargo.toml  moon.yml
crates/symphony-tracker/src/: client.rs  error.rs  filter.rs  lib.rs  normalize.rs
crates/symphony-tracker/tests/: wiremock_fetch_candidates.rs
crates/symphony-workflow/: Cargo.toml  moon.yml
crates/symphony-workflow/src/: error.rs  lib.rs  loader.rs  path.rs
crates/symphony-workspace/: Cargo.toml  moon.yml
crates/symphony-workspace/src/: lib.rs  manager.rs  path.rs
crates/symphony-workspace/tests/: worktree_integration.rs
docs/: 02-system-overview.md  03-domain-model.md  04-workflow-spec.md  05-configuration.md  06-orchestration.md  07-polling-scheduling.md  08-workspace-management.md  09-agent-runner.md  10-github-tracker.md  11-prompt-construction.md  12-logging-observability.md  13-failure-recovery.md  14-security.md  15-reference-algorithms.md  16-testing.md  17-implementation-checklist.md  SPEC.md  SPEC_ADDENDUM_1.md  SPEC_ADDENDUM_2.md  sandbox-firecracker.md
docs/SPEC/: 01-problem-and-goals.md  02-system-overview.md  03-domain-model.md  05-configuration.md  06-orchestration.md  07-polling-scheduling.md  08-workspace-management.md  08-worktree-management.md  09-agent-runner.md  10-github-tracker.md  11-prompt-construction.md  14-security.md  15-reference-algorithms.md  16-testing.md  17-implementation-checklist.md  18-operator-runbook.md
docs/SPEC_ADDENDUM_1/: 01-label-filtering.md  02-durable-claim.md  03-pr-driven-workflow.md  04-integration-and-config.md  README.md
docs/SPEC_ADDENDUM_2/: 01-scope-and-opt-in.md  02-fix-pr-candidate-set.md  03-single-polling-loop.md  04-dispatch-condition.md  05-mention-trigger.md  06-definition-of-checks.md  07-agent-fix-pr-behaviour.md  08-integration-with-base-spec.md  09-config-summary.md  README.md
history/: INTEGRATION_E2E_BD_PLAN.md  TESTING_STRATEGY.md
scripts/: inline-workflow-into-readme.sh
