[workspace]
resolver = "2"
members = [
  "crates/symphony-domain",
  "crates/symphony-workflow",
  "crates/symphony-config",
  "crates/symphony-orchestration",
  "crates/symphony-runner",
  "crates/symphony-workspace",
  "crates/symphony-agent",
  "crates/symphony-tracker",
  "crates/symphony-prompt",
]
