[workspace]
resolver = "2"
members = [
  "crates/symphony-domain",
  "crates/symphony-workflow",
  "crates/symphony-config",
  "crates/symphony-orchestration",
  "crates/symphony-runner",
  "crates/symphony-workspace",
  "crates/symphony-agent",
  "crates/symphony-tracker",
  "crates/symphony-prompt",
]

# Single version and shared metadata for all workspace crates (inherit with version.workspace = true).
[workspace.package]
version = "0.2.4"
edition = "2021"
license = "CC-BY-SA-4.0"

# Workspace crates; path is relative to this file. Use in members with dependency = { workspace = true }.
# Version must match [workspace.package] for crates.io publish.
[workspace.dependencies]
symphony-domain = { path = "crates/symphony-domain", version = "0.2.4" }
symphony-config = { path = "crates/symphony-config", version = "0.2.4" }
symphony-workflow = { path = "crates/symphony-workflow", version = "0.2.4" }
symphony-orchestration = { path = "crates/symphony-orchestration", version = "0.2.4" }
symphony-agent = { path = "crates/symphony-agent", version = "0.2.4" }
symphony-prompt = { path = "crates/symphony-prompt", version = "0.2.4" }
symphony-tracker = { path = "crates/symphony-tracker", version = "0.2.4" }
symphony-workspace = { path = "crates/symphony-workspace", version = "0.2.4" }
