[package]
name = "symphony-agent"
version = "0.2.3"
edition = "2021"
description = "Agent runner protocol: NDJSON messages (SPEC §10)"
license = "CC-BY-SA-4.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = [
  "process",
  "io-util",
  "time",
  "sync",
  "rt",
  "macros",
] }
tracing = "0.1"
