[package]
name = "symphony-agent"
version.workspace = true
edition.workspace = true
description = "Agent runner protocol: NDJSON messages (SPEC §10)"
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = [
  "process",
  "io-util",
  "time",
  "sync",
  "rt",
  "macros",
] }
tracing = "0.1"
