[package]
name = "symphony-config"
version.workspace = true
edition.workspace = true
description = "Typed config layer: defaults, $VAR resolution, dispatch validation (SPEC §6)"
license.workspace = true

[dependencies]
once_cell = "1"
symphony-domain = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "3"
validator = { version = "0.20", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "rt", "macros"] }
symphony-workflow = { workspace = true }
