[package]
name = "symphony-domain"
version = "0.1.0"
edition = "2021"
description = "Core domain types for Symphony orchestrator"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.20", features = ["derive"] }
