[package]
name = "symphony-domain"
version = "0.2.2"
edition = "2021"
description = "Core domain types for Symphony orchestrator"
license = "CC-BY-SA-4.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.20", features = ["derive"] }
