[package]
name = "symphony-guest-runner"
version.workspace = true
edition.workspace = true
description = "Vsock agent-runner for Firecracker guest (one connection per run, JSON + framed protocol)"

[[bin]]
name = "symphony-guest-runner"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
  "io-util",
  "process",
  "rt-multi-thread",
  "macros",
  "net",
  "sync",
  "time",
] }
tokio-vsock = "0.7"
