[package]
name = "symphony-orchestration"
version = "0.2.3"
edition = "2021"
description = "Orchestrator messages and claim state (SPEC §7)"
license = "CC-BY-SA-4.0"

[dependencies]
symphony-domain = { path = "../symphony-domain" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
