[package]
name = "symphony-orchestration"
version.workspace = true
edition.workspace = true
description = "Orchestrator messages and claim state (SPEC §7)"
license.workspace = true

[dependencies]
symphony-domain = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tracing = "0.1"
