[package]
name = "symphony-runner"
version = "0.2.3"
edition = "2021"
description = "Tokio orchestrator loop: single-owner task, channel, tick, workers (SPEC §6–7)"
license = "CC-BY-SA-4.0"

[[bin]]
name = "symphony"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
symphony-config = { path = "../symphony-config", version = "0.2.3" }
symphony-workflow = { path = "../symphony-workflow", version = "0.2.3" }
symphony-orchestration = { path = "../symphony-orchestration", version = "0.2.3" }
symphony-domain = { path = "../symphony-domain", version = "0.2.3" }
symphony-agent = { path = "../symphony-agent", version = "0.2.3" }
symphony-prompt = { path = "../symphony-prompt", version = "0.2.3" }
symphony-tracker = { path = "../symphony-tracker", version = "0.2.3", features = [
  "client",
] }
symphony-workspace = { path = "../symphony-workspace", version = "0.2.3" }
