[package]
name = "symphony-runner"
version.workspace = true
edition.workspace = true
description = "Tokio orchestrator loop: single-owner task, channel, tick, workers (SPEC §6–7)"
license.workspace = true

[[bin]]
name = "symphony"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
symphony-config = { workspace = true }
symphony-workflow = { workspace = true }
symphony-orchestration = { workspace = true }
symphony-domain = { workspace = true }
symphony-agent = { workspace = true }
symphony-prompt = { workspace = true }
symphony-tracker = { workspace = true, features = ["client"] }
symphony-workspace = { workspace = true }
