[package]
name = "symphony-tracker"
version = "0.1.0"
edition = "2021"
description = "Issue tracker integration: GitHub normalization and errors (SPEC §11)"
license = "CC-BY-SA-4.0"

[dependencies]
symphony-domain = { path = "../symphony-domain" }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = [
  "json",
  "rustls-tls",
], default-features = false, optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["time"], optional = true }

[features]
default = ["client"]
client = ["dep:reqwest", "dep:tokio"]
