[package]
name = "symphony-tracker"
version.workspace = true
edition.workspace = true
description = "Issue tracker integration: GitHub normalization and errors (SPEC §11)"
license.workspace = true

[dependencies]
symphony-domain = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = [
  "json",
  "rustls-tls",
], default-features = false, optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["time"], optional = true }

[features]
default = ["client"]
client = ["dep:reqwest", "dep:tokio"]
