[package]
name = "symphony-workflow"
version = "0.2.3"
edition = "2021"
description = "WORKFLOW.md loader: path resolution, YAML front matter, prompt body (SPEC §5)"
license = "CC-BY-SA-4.0"

[dependencies]
symphony-domain = { path = "../symphony-domain" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
once_cell = "1"
thiserror = "2"
