[package]
name = "symphony-workflow"
version.workspace = true
edition.workspace = true
description = "WORKFLOW.md loader: path resolution, YAML front matter, prompt body (SPEC §5)"
license.workspace = true

[dependencies]
symphony-domain = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
once_cell = "1"
thiserror = "2"
