[package]
name = "symphony-workspace"
version = "0.2.1"
edition = "2021"
description = "Workspace path resolution and safety (SPEC §9)"
license = "CC-BY-SA-4.0"

[dependencies]
symphony-domain = { path = "../symphony-domain" }
thiserror = "2"
tokio = { version = "1", features = ["fs", "process", "rt", "macros", "time"] }
