[package]
name = "symphony-workspace"
version.workspace = true
edition.workspace = true
description = "Workspace path resolution and safety (SPEC §9)"
license.workspace = true

[dependencies]
symphony-domain = { workspace = true }
thiserror = "2"
tokio = { version = "1", features = ["fs", "process", "rt", "macros", "time"] }
