[package]
name = "symphony-workspace"
version.workspace = true
edition.workspace = true
description = "Git worktree path resolution and safety (SPEC §9)"
license.workspace = true

[dependencies]
symphony-domain = { workspace = true }
thiserror = "2"
tokio = { version = "1", features = ["fs", "process", "rt", "macros", "time"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util", "rt", "macros"] }
